feat: 백엔드 API 접두사/버전 도입, OpenAPI 태그 부여, Rate Limit 외부화 + 프론트엔드 코드 생성 체인 정비
백엔드:
1. 공통
- 'spring-boot-configuration-processor' 도입(IDE 자동완성/문서화) (build)
- ContentHubApplication.java에 @ConfigurationPropertiesScan 추가(@ConfigurationProperties 스캔/등록) (chore)
- API 경로에 prefix + version을 접두사 적용 (feat)
- application.yml 설정값을 참조하는 ApiPrefixProperties.java, ApiRateLimitProperties.java 작성 (feat)
- PathUtil.java(API 경로 결합 처리 유틸) 작성 (refactor)
- ApiController.java 메타 애노테이션 작성 → ApiPrefixConfig.java에서 @ApiController 대상에 API 경로 접두사 설정 (feat)
- 각 컨트롤러에 OpenAPI Tag 및 Operation 부여 (feat)
- API Rate Limit 요청 횟수/시간(초) 엔드포인트별 지정, application.yml에서 설정하도록 변경 (feat)
- ApiRateLimitService.java 를 추가하여 application.yml 에 추가한 각 경로의 최대 요청 회수/시간(초) 반환 (feat)
- API Rate Limit 정의 enum 삭제 (refactor)

프론트엔드:
1. 공통
- swagger-typescript-api 버전업(13.1.1 → 13.2.15) (build)
- 미사용 라이브러리 openapi-generator-cli 제거 (chore)
- npx swagger-typescript-api generate 커맨드에 --module-name-first-tag 옵션 추가(태그별 파일 분리) (build)
- package.json scripts에 swagger-typescript-api 코드 생성 명령어 등록 (build)
- 백엔드 Tag 추가로 인한 각 API호출 파일명 변경에 따른 각 기능의 API 호출 훅 경로/파일명 수정 (refactor)
