# backend/content-hub-backend/content-hub/src/main/java/com/cjy/contenthub/character/controller/CharacterController.java
@@ -7,19 +7,22 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.reactive.function.client.WebClient;
 
 import com.cjy.contenthub.character.service.CharacterService;
+import com.cjy.contenthub.common.annotation.ApiController;
 import com.cjy.contenthub.common.api.dto.aniist.AniListCharactersNodeDto;
 import com.cjy.contenthub.common.api.dto.aniist.AniListStaffNodeDto;
 
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 
 /**
  * 캐릭터 정보 API 컨트롤러 클래스
  */
-@RestController
+@Tag(name = "character-api", description = "Character APIs")
+@ApiController
 @RequestMapping("/character")
 @RequiredArgsConstructor
 public class CharacterController {
@@ -41,7 +44,6 @@ public class CharacterController {
 	/** 리퀘스트 파라미터 키 : 스태프ID */
 	private static final String PARAM_STAFF_ID = "staff_id";
 
-
 	/**
 	 * 캐릭터 조회
 	 *
@@ -49,6 +51,7 @@ public class CharacterController {
 	 * @return ResponseEntity<AniListCharactersNodesDto> 캐릭터 정보
 	 * @throws IOException 쿼리 파일 로딩 중 발생하는 예외
 	 */
+	@Operation(summary = "캐릭터 조회")
 	@GetMapping(value = "/getCharacter")
 	public ResponseEntity<AniListCharactersNodeDto> getCharacter(
 			@RequestParam(PARAM_CHARACTER_ID) Integer characterId) throws IOException {
@@ -62,6 +65,7 @@ public class CharacterController {
 	 * @return ResponseEntity<AniListStaffNodeDto> 스태프 정보
 	 * @throws IOException 쿼리 파일 로딩 중 발생하는 예외
 	 */
+	@Operation(summary = "스태프 조회")
 	@GetMapping(value = "/getStaff")
 	public ResponseEntity<AniListStaffNodeDto> getStaff(
 			@RequestParam(PARAM_STAFF_ID) Integer staffId) throws IOException {
