# backend/content-hub-backend/content-hub/src/main/java/com/cjy/contenthub/home/controller/HomeController.java
@@ -4,19 +4,22 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
 
+import com.cjy.contenthub.common.annotation.ApiController;
 import com.cjy.contenthub.home.controller.dto.HomeRankingListResponseDto;
 import com.cjy.contenthub.home.mapper.HomeMapper;
 import com.cjy.contenthub.home.service.HomeService;
 import com.cjy.contenthub.home.service.dto.HomeRankingListServiceDto;
 
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 
 /**
  * 홈 화면 API 컨트롤러 클래스
  */
-@RestController
+@Tag(name = "home-api", description = "Home APIs")
+@ApiController
 @RequestMapping("/home")
 @RequiredArgsConstructor
 public class HomeController {
@@ -31,11 +34,12 @@ public class HomeController {
 	private static final String PARAM_USER_ID = "user_id";
 	
 	/**
-	 * 콘텐츠 랭킹 정보를 조회
+	 * 콘텐츠 랭킹 정보 조회
 	 * 
 	 * @param userId 유저 테이블 ID
 	 * @return 콘텐츠 랭킹 응답 DTO 리스트
 	 */
+	@Operation(summary = "콘텐츠 랭킹 정보 조회")
 	@GetMapping("/rankings")
 	public ResponseEntity<HomeRankingListResponseDto> getContentRankings(@RequestParam(value = PARAM_USER_ID, required = false) Long userId) {
 		// 서비스에서 콘텐츠 랭킹 데이터 조회
