# backend/content-hub-backend/content-hub/src/main/java/com/cjy/contenthub/my/comments/controller/MyCommentsController.java
@@ -4,19 +4,22 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
 
+import com.cjy.contenthub.common.annotation.ApiController;
 import com.cjy.contenthub.my.comments.controller.dto.MyCommentsResponseDto;
 import com.cjy.contenthub.my.comments.mapper.MyCommentsMapper;
 import com.cjy.contenthub.my.comments.service.MyCommentsService;
 import com.cjy.contenthub.my.comments.service.dto.MyCommentsServiceDto;
 
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 
 /**
  * 나의 코멘트 컨트롤러
  */
-@RestController
+@Tag(name = "my-comments-api", description = "Wishlist APIs")
+@ApiController
 @RequestMapping("/my/comments")
 @RequiredArgsConstructor
 public class MyCommentsController {
@@ -40,6 +43,7 @@ public class MyCommentsController {
 	 * @param pageNo 페이지 번호
 	 * @return 나의 코멘트 리스트
 	 */
+	@Operation(summary = "나의 코멘트 리스트 조회")
 	@GetMapping("/getMyCommentList")
 	public ResponseEntity<MyCommentsResponseDto> getMyCommentList(@RequestParam(PARAM_USER_ID) Long userId,
 			@RequestParam(PARAM_PAGE_NO) Integer pageNo) {
