# frontend/content-hub-frontend/api-docs.yaml
@@ -5,11 +5,35 @@ info:
 servers:
   - url: http://localhost:8080
     description: Generated server url
+tags:
+  - name: my-comments-api
+    description: Wishlist APIs
+  - name: wishlist-api
+    description: Wishlist APIs
+  - name: detail-comments-api
+    description: Detail Comments APIs
+  - name: detail-information-api
+    description: Detail Information APIs
+  - name: character-api
+    description: Character APIs
+  - name: detail-recommendation-api
+    description: Detail Recommendation APIs
+  - name: login-api
+    description: Login APIs
+  - name: person-api
+    description: Person APIs
+  - name: common-api
+    description: Common APIs
+  - name: search-api
+    description: Search APIs
+  - name: home-api
+    description: Home APIs
 paths:
-  /detail/comment/updateComment:
+  /api/detail/comments/updateComment:
     put:
       tags:
-        - detail-comments-controller
+        - detail-comments-api
+      summary: 코멘트 갱신
       operationId: updateComent
       requestBody:
         content:
@@ -24,10 +48,11 @@ paths:
             '*/*':
               schema:
                 type: boolean
-  /wishlist/saveWishlist:
+  /api/wishlist/saveWishlist:
     post:
       tags:
-        - wishlist-controller
+        - wishlist-api
+      summary: 위시리스트 등록
       operationId: saveWishlist
       requestBody:
         content:
@@ -42,10 +67,11 @@ paths:
             '*/*':
               schema:
                 type: boolean
-  /wishlist/getWishlist:
+  /api/wishlist/getWishlist:
     post:
       tags:
-        - wishlist-controller
+        - wishlist-api
+      summary: 위시리스트 조회
       operationId: getWishlist
       parameters:
         - name: userId
@@ -61,10 +87,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/WishlistListResponseDto'
-  /detail/comment/saveComment:
+  /api/detail/comments/saveComment:
     post:
       tags:
-        - detail-comments-controller
+        - detail-comments-api
+      summary: 코멘트 등록
       operationId: saveComent
       requestBody:
         content:
@@ -79,10 +106,11 @@ paths:
             '*/*':
               schema:
                 type: boolean
-  /common/setAdultFlg:
+  /api/common/setAdultFlg:
     post:
       tags:
-        - common-controller
+        - common-api
+      summary: 성인 여부 플래그 조회
       operationId: setAdultFlg
       parameters:
         - name: adult_flg
@@ -93,18 +121,20 @@ paths:
       responses:
         '200':
           description: OK
-  /common/clearAdultFlg:
+  /api/common/clearAdultFlg:
     post:
       tags:
-        - common-controller
+        - common-api
+      summary: 성인 여부 플래그 클리어
       operationId: clearAdultFlg
       responses:
         '200':
           description: OK
-  /wishlist/checkWishlist:
+  /api/wishlist/checkWishlist:
     get:
       tags:
-        - wishlist-controller
+        - wishlist-api
+      summary: 위시리스트 체크
       operationId: checkWishlist
       parameters:
         - name: user_id
@@ -130,10 +160,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/WishlistCheckResultResponseDto'
-  /search/searchVideo:
+  /api/search/searchVideo:
     get:
       tags:
-        - search-controller
+        - search-api
+      summary: 비디오 검색
       operationId: searchVideo
       parameters:
         - name: keyword
@@ -154,10 +185,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/SearchVideoResponseDto'
-  /search/searchTvExceptAni:
+  /api/search/searchTvExceptAni:
     get:
       tags:
-        - search-controller
+        - search-api
+      summary: 애니메이션 제외한 TV 시리즈 검색
       operationId: searchTvExceptAni
       parameters:
         - name: keyword
@@ -189,10 +221,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/SearchTvResponseDto'
-  /search/searchMovie:
+  /api/search/searchMovie:
     get:
       tags:
-        - search-controller
+        - search-api
+      summary: 영화 정보 검색
       operationId: searchMovie
       parameters:
         - name: keyword
@@ -219,10 +252,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/SearchMovieResponseDto'
-  /search/searchKeyword:
+  /api/search/searchKeyword:
     get:
       tags:
-        - search-controller
+        - search-api
+      summary: 검색어 리스트 조회
       operationId: searchKeyword
       parameters:
         - name: keyword
@@ -239,10 +273,11 @@ paths:
                 type: array
                 items:
                   type: string
-  /search/searchComics:
+  /api/search/searchComics:
     get:
       tags:
-        - search-controller
+        - search-api
+      summary: 만화 정보 검색
       operationId: searchComics
       parameters:
         - name: keyword
@@ -274,10 +309,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/SearchComicsResponseDto'
-  /search/searchAni:
+  /api/search/searchAni:
     get:
       tags:
-        - search-controller
+        - search-api
+      summary: 애니메이션 검색
       operationId: searchAni
       parameters:
         - name: keyword
@@ -304,10 +340,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/SearchTvResponseDto'
-  /person/details:
+  /api/person/getPersonDetails:
     get:
       tags:
-        - person-controller
+        - person-api
+      summary: 인물 상세 정보 조회
       operationId: getPersonDetails
       parameters:
         - name: person_id
@@ -323,10 +360,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/PersonResponseDto'
-  /my/comments/getMyCommentList:
+  /api/my/comments/getMyCommentList:
     get:
       tags:
-        - my-comments-controller
+        - my-comments-api
+      summary: 나의 코멘트 리스트 조회
       operationId: getMyCommentList
       parameters:
         - name: user_id
@@ -348,10 +386,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/MyCommentsResponseDto'
-  /login/updateNaverLoginInfo:
+  /api/login/updateNaverLoginInfo:
     get:
       tags:
-        - login-controller
+        - login-api
+      summary: 네이버 로그인 정보 갱신
       operationId: updateNaverLoginInfo
       responses:
         '200':
@@ -360,10 +399,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/LoginUserResponseDto'
-  /login/updateKakaoLoginInfo:
+  /api/login/updateKakaoLoginInfo:
     get:
       tags:
-        - login-controller
+        - login-api
+      summary: 카카오 로그인 정보 갱신
       operationId: updateKakaoLoginInfo
       parameters:
         - name: client_id
@@ -378,10 +418,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/LoginUserResponseDto'
-  /login/getNaverUserInfo:
+  /api/login/getNaverUserInfo:
     get:
       tags:
-        - login-controller
+        - login-api
+      summary: 네이버 유저 정보 조회
       operationId: getNaverUserInfo
       parameters:
         - name: access_token
@@ -402,10 +443,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/LoginUserResponseDto'
-  /login/getNaverLoginInfo:
+  /api/login/getNaverLoginInfo:
     get:
       tags:
-        - login-controller
+        - login-api
+      summary: 네이버 로그인 정보 조회
       operationId: getNaverLoginInfo
       parameters:
         - name: code
@@ -425,10 +467,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/LoginUserResponseDto'
-  /login/getKakaoUserInfo:
+  /api/login/getKakaoUserInfo:
     get:
       tags:
-        - login-controller
+        - login-api
+      summary: 카카오 유저 정보 조회
       operationId: getKakaoUserInfo
       parameters:
         - name: access_token
@@ -449,10 +492,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/LoginUserResponseDto'
-  /login/getKakaoLoginInfo:
+  /api/login/getKakaoLoginInfo:
     get:
       tags:
-        - login-controller
+        - login-api
+      summary: 카카오 로그인 정보 조회
       operationId: getKakaoLoginInfo
       parameters:
         - name: client_id
@@ -477,10 +521,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/LoginUserResponseDto'
-  /login/deleteNaverToken:
+  /api/login/deleteNaverToken:
     get:
       tags:
-        - login-controller
+        - login-api
+      summary: 네이버 토큰 삭제
       operationId: deleteNaverToken
       parameters:
         - name: access_token
@@ -506,10 +551,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/NaverDeleteTokenDto'
-  /login/deleteKakaoToken:
+  /api/login/deleteKakaoToken:
     get:
       tags:
-        - login-controller
+        - login-api
+      summary: 카카오 토큰 삭제
       operationId: deleteKakaoToken
       parameters:
         - name: access_token
@@ -535,10 +581,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/KakaoUserInfoDto'
-  /home/rankings:
+  /api/home/rankings:
     get:
       tags:
-        - home-controller
+        - home-api
+      summary: 콘텐츠 랭킹 정보 조회
       operationId: getContentRankings
       parameters:
         - name: user_id
@@ -554,10 +601,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/HomeRankingListResponseDto'
-  /detail/recommendation/getTvRecommendations:
+  /api/detail/recommendation/getTvRecommendations:
     get:
       tags:
-        - detail-recommendation-controller
+        - detail-recommendation-api
+      summary: TV 추천 작품 조회
       operationId: getTvRecommendations
       parameters:
         - name: series_id
@@ -585,10 +633,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/DetailRecommendationsTvDto'
-  /detail/recommendation/getMovieRecommendations:
+  /api/detail/recommendation/getMovieRecommendations:
     get:
       tags:
-        - detail-recommendation-controller
+        - detail-recommendation-api
+      summary: 영화 추천 작품 조회
       operationId: getMovieRecommendations
       parameters:
         - name: movie_id
@@ -616,10 +665,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/DetailRecommendationsMovieDto'
-  /detail/recommendation/getComicsRecommendations:
+  /api/detail/recommendation/getComicsRecommendations:
     get:
       tags:
-        - detail-recommendation-controller
+        - detail-recommendation-api
+      summary: 만화 추천 작품 조회
       operationId: getComicsRecommendations
       parameters:
         - name: media_id
@@ -647,10 +697,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/DetailRecommendationsComicsResponseDto'
-  /detail/information/getTvDetail:
+  /api/detail/information/getTvDetail:
     get:
       tags:
-        - detail-information-controller
+        - detail-information-api
+      summary: TV 상세 조회
       operationId: getTvDetail
       parameters:
         - name: series_id
@@ -677,10 +728,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/DetailTvResponseDto'
-  /detail/information/getMovieDetail:
+  /api/detail/information/getMovieDetail:
     get:
       tags:
-        - detail-information-controller
+        - detail-information-api
+      summary: 영화 상세 조회
       operationId: getMovieDetail
       parameters:
         - name: movie_id
@@ -707,10 +759,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/DetailMovieResponseDto'
-  /detail/information/getComicsStaffList:
+  /api/detail/information/getComicsStaffList:
     get:
       tags:
-        - detail-information-controller
+        - detail-information-api
+      summary: 스태프 리스트 조회
       operationId: getComicsStaffList
       parameters:
         - name: comics_id
@@ -732,10 +785,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/AniListStaffDto'
-  /detail/information/getComicsDetail:
+  /api/detail/information/getComicsDetail:
     get:
       tags:
-        - detail-information-controller
+        - detail-information-api
+      summary: 만화 상세 조회
       operationId: getComicsDetail
       parameters:
         - name: comics_id
@@ -762,10 +816,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/DetailComicsResponseDto'
-  /detail/information/getComicsCharacterList:
+  /api/detail/information/getComicsCharacterList:
     get:
       tags:
-        - detail-information-controller
+        - detail-information-api
+      summary: 캐릭터 리스트 조회
       operationId: getComicsCharacterList
       parameters:
         - name: comics_id
@@ -787,10 +842,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/AniListCharactersDto'
-  /detail/comment/getStarRatingAverage:
+  /api/detail/comments/getStarRatingAverage:
     get:
       tags:
-        - detail-comments-controller
+        - detail-comments-api
+      summary: 별점 평균 조회
       operationId: getStarRatingAverage
       parameters:
         - name: content_media_type
@@ -810,10 +866,11 @@ paths:
             '*/*':
               schema:
                 type: number
-  /detail/comment/getCommentList:
+  /api/detail/comments/getCommentList:
     get:
       tags:
-        - detail-comments-controller
+        - detail-comments-api
+      summary: 코멘트 목록 조회
       operationId: getCommentList
       parameters:
         - name: content_media_type
@@ -844,10 +901,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/DetailCommentsGetResponseDto'
-  /common/getMediaTypes:
+  /api/common/getMediaTypes:
     get:
       tags:
-        - common-controller
+        - common-api
+      summary: 공통 미디어 타입 조회
       operationId: getMediaTypes
       responses:
         '200':
@@ -856,10 +914,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/CommonMediaTypeResponseDto'
-  /common/getCsrfToken:
+  /api/common/getCsrfToken:
     get:
       tags:
-        - common-controller
+        - common-api
+      summary: CSRF 토큰 조회
       operationId: getCsrfToken
       parameters:
         - name: token
@@ -874,10 +933,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/CsrfToken'
-  /character/getStaff:
+  /api/character/getStaff:
     get:
       tags:
-        - character-controller
+        - character-api
+      summary: 스태프 조회
       operationId: getStaff
       parameters:
         - name: staff_id
@@ -893,10 +953,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/AniListStaffNodeDto'
-  /character/getCharacter:
+  /api/character/getCharacter:
     get:
       tags:
-        - character-controller
+        - character-api
+      summary: 캐릭터 조회
       operationId: getCharacter
       parameters:
         - name: character_id
@@ -912,10 +973,11 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/AniListCharactersNodeDto'
-  /wishlist/deleteWishlist:
+  /api/wishlist/deleteWishlist:
     delete:
       tags:
-        - wishlist-controller
+        - wishlist-api
+      summary: 위시리스트 삭제
       operationId: deleteWishlist
       requestBody:
         content:
@@ -930,10 +992,11 @@ paths:
             '*/*':
               schema:
                 type: boolean
-  /detail/comment/deleteComment:
+  /api/detail/comments/deleteComment:
     delete:
       tags:
-        - detail-comments-controller
+        - detail-comments-api
+      summary: 코멘트 삭제
       operationId: deleteComment
       parameters:
         - name: comment_id
@@ -1680,11 +1743,11 @@ components:
         ciAuthenticatedAt:
           type: string
           format: date-time
-        emailVerified:
+        emailValid:
           type: boolean
         leapMonth:
           type: boolean
-        emailValid:
+        emailVerified:
           type: boolean
     KakaoPartnerDto:
       type: object
@@ -2344,9 +2407,9 @@ components:
           format: int32
         siteUrl:
           type: string
-        favourite:
-          type: boolean
         favouriteBlocked:
+          type: boolean
+        favourite:
           type: boolean
     DetailComicsResponseDto:
       type: object
@@ -2508,9 +2571,9 @@ components:
     CsrfToken:
       type: object
       properties:
+        token:
+          type: string
         parameterName:
           type: string
         headerName:
-          type: string
-        token:
           type: string
